Toggle add column, fix width being 2px too wide

--- a/src/kanban/index.scss
+++ b/src/kanban/index.scss
@@ -5,7 +5,11 @@
   width: 100vw;
   overflow-x: auto;
   height: 100%; // this is twice the height of the screen when dragging a column
-  & div[data-rbd-placeholder-context-id] {
+
+  // This element is inserted when dragging a column to add spacing at the
+  // end to drop the column on. Because we can't get it before add column block
+  // we simply hide it
+  & > div[data-rbd-placeholder-context-id] {
     display: none !important;
   }
 }
@@ -66,10 +70,9 @@
   transition: opacity 0.6s;
   height: 100%;
   padding: $gridSpacing;
-  box-sizing: border-box;
 }
 .addColumnContainer {
-  padding-right: 2*$gridSpacing;
+  padding-right: 2*$gridSpacing - 2px;
   box-sizing: content-box;
 }
 .addColumnContainer.hidden {
